--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link rel="stylesheet" href="/style.css">
+	<title>Camera_Gallery</title>
 </head>
 <body>
+	<div class="video-cont">
+		<video controls src=""></video>
+	</div>
+
 	
+	<script src="/script.js"></script>
 </body>
 </html>
