Structure of record and capture btn

--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 </head>
 <body>
 	<div class="video-cont">
-		<video controls src=""></video>
+		<video autoplay src=""></video>
 	</div>
 
-	
+	<div class="actions-cont">
+		<div class="record-btn-cont">
+			<div class="record-btn"></div>
+		</div>
+
+		<div class="capture-btn-cont">
+			<div class="capture-btn"></div>
+		</div>
+	</div>
+
+
 	<script src="/script.js"></script>
 </body>
 </html>
