--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<video autoplay src=""></video>
 	</div>
 
-	<div class="actions-cont">
+	<div class="action-cont">
 		<div class="record-btn-cont">
-			<div class="record-btn"></div>
+			<div class="record-btn"> </div>
 		</div>
 
 		<div class="capture-btn-cont">
