--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
 	<link rel="stylesheet" href="/style.css">
 	<title>Camera_Gallery</title>
 </head>
+
 <body>
 	<div class="video-cont">
 		<video autoplay src=""></video>
@@ -22,7 +24,12 @@
 		</div>
 	</div>
 
+	<div class="timer-cont">
+		<h1 class="timer">00:00:00</h1>
+	</div>
+
 
 	<script src="/script.js"></script>
 </body>
+
 </html>
