Intro to indexedDB

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 	</div>
 
 	<div class="filter-layer">
-		
+
 	</div>
 
+	<script src="/db.js"></script>
 	<script src="/script.js"></script>
 </body>
 
