--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="/style.css">
 	<title>Camera_Gallery</title>
 </head>
@@ -35,9 +36,15 @@
 		<div class="filter transparent"></div>
 	</div>
 
-	<div class="filter-layer">
+	<div class="filter-layer"></div>
 
-	</div>
+
+
+   	 <span class="material-icons gallery">
+      	  collections
+    	</span>
+
+
 	<script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
 	<script src="/db.js"></script>
 	<script src="/script.js"></script>
